--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react": "4.6.0",
+    "esbuild": "^0.25.6",
     "fs": "^0.0.1-security",
     "nodemon": "3.1.10",
     "tailwindcss": "4.1.4",
