--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://example.com/docs",
   "scripts": {
     "build": "react-router build",
+    "build:be": "node build.js",
     "_build": "vite build  --base=/a5de8ad3/",
     "dev": "react-router dev",
     "dev:be": "nodemon backend/server",
