Added script to check for .env

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "type": "module",
   "version": "1.0.0",
-  "homepage": "https://example.com/docs",
+  "homepage": "https://demo.codebrew.cc/a5de8ad3",
   "scripts": {
-    "build:fe": "react-router build",
     "build:be": "node build.js",
-    "dev:fe": "react-router dev",
+    "build:fe": "react-router build",
     "dev:be": "nodemon backend/server",
+    "dev:fe": "react-router dev",
     "dev": "concurrently \"npm run dev:fe\" \"npm run dev:be\"",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "node ./.scripts/create.env.js && concurrently \"npm run dev:fe\" \"npm run dev:be\"",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
@@ -30,16 +30,16 @@
     "rxjs": "7.8.2"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.6.3",
+    "@react-router/dev": "7.6.3",
     "@tailwindcss/vite": "4.1.4",
     "@types/lodash.debounce": "4.0.9",
     "@types/node": "20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "@vitejs/plugin-react": "4.6.0",
-    "concurrently": "^9.2.0",
-    "esbuild": "^0.25.6",
-    "fs": "^0.0.1-security",
+    "concurrently": "9.2.0",
+    "esbuild": "0.25.6",
+    "fs": "0.0.1-security",
     "nodemon": "3.1.10",
     "tailwindcss": "4.1.4",
     "typescript": "5.8.3",
